# pause_ink

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT.template.txt  README.md  progress.md  test_timeline_01.md
.agents/skills/discord-report/: SKILL.md
.agents/skills/discord-report/agents/: openai.yaml
.agents/skills/discord-report/scripts/: discord_notify.py
.docs/: 00_project_overview.md  01_locked_decisions.md  02_final_spec_v1.0.0.md  03_ui_window_model.md  04_architecture.md  05_project_file_format.md  06_stroke_processing_and_future_taper.md  07_media_runtime_and_ffmpeg.md  08_output_profiles_and_platform_presets.md  09_portable_layout_and_cache.md  10_testing_and_done_criteria.md  11_implementation_plan.md  12_future_work.md  13_risk_register.md  14_subagent_strategy.md  15_reference_links.md  16_remaining_tasks_plan.md
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/domain/: Cargo.toml
crates/domain/src/: annotations.rs  history.rs  lib.rs  project_commands.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/fonts/: Cargo.toml
crates/fonts/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/portable_fs/: Cargo.toml
crates/portable_fs/src/: lib.rs
crates/presets_core/: Cargo.toml
crates/presets_core/src/: lib.rs
crates/project_io/: Cargo.toml
crates/project_io/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/template_layout/: Cargo.toml
crates/template_layout/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
docs/: implementation_report_v1.0.0.md
manual/: developer_guide.md  user_guide.md
manual/tutorials/: 01_add_export_profile.md  02_add_builtin_preset.md
presets/clear_presets/: instant_all_parallel.json5
presets/combo_presets/: marker_highlight.json5  white_pen_fastwrite.json5
presets/entrance_presets/: marker_highlight.json5  white_pen_fastwrite.json5
presets/export_profiles/: README.md  adobe_alpha_prores_4444.json5  adobe_edit_prores_422hq.json5  custom.json5  high.json5  instagram.json5  medium.json5  web_low.json5  x.json5  youtube.json5
presets/style_presets/: README.md  marker_highlight.json5  white_pen_fastwrite.json5
runtime/: README.md
samples/: minimal_project.pauseink  settings.example.json5
scripts/: package_release_asset.py  package_release_asset_test.py
