[workspace]
members = [
  "crates/app",
  "crates/domain",
  "crates/project_io",
  "crates/portable_fs",
  "crates/presets_core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
