[workspace]
members = [
  "crates/app",
  "crates/domain",
  "crates/export",
  "crates/fonts",
  "crates/media",
  "crates/project_io",
  "crates/portable_fs",
  "crates/presets_core",
  "crates/renderer",
  "crates/template_layout",
  "crates/ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
