[package]
name = "pauseink-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
pauseink-domain = { path = "../domain" }
pauseink-export = { path = "../export" }
pauseink-fonts = { path = "../fonts" }
pauseink-media = { path = "../media" }
pauseink-project-io = { path = "../project_io" }
pauseink-portable-fs = { path = "../portable_fs" }
pauseink-presets-core = { path = "../presets_core" }
pauseink-renderer = { path = "../renderer" }
pauseink-template-layout = { path = "../template_layout" }
pauseink-ui = { path = "../ui" }
tracing.workspace = true
tracing-subscriber.workspace = true
