[package]
name = "pauseink-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image.workspace = true
pauseink-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
