[package]
name = "pauseink-presets-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
json5 = "0.4"
pauseink-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
